--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Missão IA</h1>
+    <div class="caixa-principal">
+
+        <h1>Você decide o futuro da IA</h1>
+        <div class="caixa-perguntas" </div>
+            <div class="caixa-alternativas">
+
+            </div>
+
 </body>
+
 </html>
